# neural_tilde

./: .gitignore  .gitmodules  Build.md  MIGRATE.md  PROTOCOL.md  README.md  pyproject.toml  requirements.txt
.claude/skills/export-neural-model/: SKILL.md
examples/: export_gen_example.py  export_live_example.py  export_tokenizer_example.py  tokenizer.json
python_tools/: __init__.py  _exporter_base.py  _lowering.py  _tokenizer.py  gen_module.py  live_module.py  migrate.py
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  backend.cpp  backend.h  et_smoke_test.cpp  gen_smoke_test.cpp  noise_seed.h
src/cmake/: nn_executorch.cmake  nn_metal_libomp.sh  nn_tokenizers.cmake
src/frontend/maxmsp/mc.neural.live_tilde/: CMakeLists.txt  mc.neural.live_tilde.cpp
src/frontend/maxmsp/mcs.neural.live_tilde/: CMakeLists.txt  mcs.neural.live_tilde.cpp
src/frontend/maxmsp/neural.gaussianize/: CMakeLists.txt  neural.gaussianize.cpp
src/frontend/maxmsp/neural.gen_tilde/: CMakeLists.txt  neural.gen_tilde.cpp
src/frontend/maxmsp/neural.info/: CMakeLists.txt  neural.info.cpp
src/frontend/maxmsp/neural.live_tilde/: CMakeLists.txt  neural.live_tilde.cpp  neural.live_tilde_test.cpp  neural.live~.maxhelp
src/frontend/maxmsp/neural.tokenizer/: CMakeLists.txt  neural.tokenizer.cpp
src/frontend/maxmsp/shared/: cond_bytes.h  cond_label.h  matrix_noise.h  neural_common.h
src/generative/: CMakeLists.txt  gen_cli.cpp  gen_runner.cpp  gen_runner.h  wav.cpp  wav.h
src/tokenizer/: CMakeLists.txt  tok_test.cpp  tokenizer.cpp  tokenizer.h  tokenizer_config.cpp  tokenizer_config.h
